right behaviour for replace for #15